XWIKI-23553: You shouldn't have to force the page lock for page without locale to enter a realtime editing session
(cherry picked from commit bf40bad1e4bbab6ccab282fe831de9b171247ecd)